--- a/PDFDocumentBuilder/Application/Info.plist
+++ b/PDFDocumentBuilder/Application/Info.plist
@@ -58,5 +58,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow access to take a picture</string>
 </dict>
 </plist>
