--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ playground.xcworkspace
 
 .build/
 
+Application/Config.xcconfig
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
