--- a/PDFDocumentBuilder/Application/Info.plist
+++ b/PDFDocumentBuilder/Application/Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LOGIN</key>
+	<key>Login</key>
 	<string>$(LOGIN)</string>
-	<key>PASSWORD</key>
+	<key>Password</key>
 	<string>$(PASSWORD)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
